@@ -19,11 +19,11 @@ package org.apache.jackrabbit.oak.spi.security.authorization.cug.impl;
 import java.lang.reflect.Field;
 import java.security.Principal;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import javax.jcr.security.AccessControlManager;
 
 import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.oak.commons.PathUtils;
 import org.apache.jackrabbit.oak.namepath.NamePathMapper;
@@ -203,7 +203,7 @@ public class CugConfigurationTest extends AbstractCugTest {
     @Test
     public void testActivate() {
         CugConfiguration cugConfiguration = createConfiguration(ConfigurationParameters.EMPTY);
-        cugConfiguration.activate(ImmutableMap.of(
+        cugConfiguration.activate(Map.of(
                 CugConstants.PARAM_CUG_ENABLED, false,
                 CugConstants.PARAM_CUG_SUPPORTED_PATHS, new String[] {"/content", "/anotherContent"}
         ));
@@ -213,7 +213,7 @@ public class CugConfigurationTest extends AbstractCugTest {
     @Test
     public void testModified() {
         CugConfiguration cugConfiguration = createConfiguration(ConfigurationParameters.EMPTY);
-        cugConfiguration.modified(ImmutableMap.of(
+        cugConfiguration.modified(Map.of(
                 CugConstants.PARAM_CUG_SUPPORTED_PATHS, new String[]{"/changed"}
         ));
         assertSupportedPaths(cugConfiguration, "/changed");
