@@ -16,7 +16,6 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authorization.principalbased.impl;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.api.security.JackrabbitAccessControlManager;
 import org.apache.jackrabbit.oak.api.PropertyState;
 import org.apache.jackrabbit.oak.api.Tree;
@@ -75,8 +74,8 @@ public class PrincipalBasedPermissionProviderTest extends AbstractPrincipalBased
         // add an entry with nt-name restriction at childPath
         JackrabbitAccessControlManager jacm = getAccessControlManager(root);
         policy = getPrincipalPolicyImpl(testPrincipal, jacm);
-        Map<String, Value[]> restrictions = ImmutableMap.of(REP_NT_NAMES, new Value[] {getValueFactory(root).createValue(NT_FOLDER, PropertyType.NAME)});
-        policy.addEntry(childPath, privilegesFromNames(JCR_REMOVE_NODE), ImmutableMap.of(), restrictions);
+        Map<String, Value[]> restrictions = Map.of(REP_NT_NAMES, new Value[] {getValueFactory(root).createValue(NT_FOLDER, PropertyType.NAME)});
+        policy.addEntry(childPath, privilegesFromNames(JCR_REMOVE_NODE), Map.of(), restrictions);
         jacm.setPolicy(policy.getPath(), policy);
         root.commit();
 
