@@ -30,7 +30,6 @@ import javax.jcr.Session;
 import javax.jcr.SimpleCredentials;
 import javax.security.auth.login.Configuration;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.api.JackrabbitSession;
 import org.apache.jackrabbit.api.security.user.UserManager;
 import org.apache.jackrabbit.oak.Oak;
@@ -241,13 +240,13 @@ abstract class AbstractExternalTest extends AbstractTest<RepositoryFixture> {
 
                         // now register the sync-handler with the dynamic membership config
                         // in order to enable dynamic membership with the external principal configuration
-                        Map<String, Object> props = ImmutableMap.of(
+                        Map<String, Object> props = Map.of(
                                 DefaultSyncConfigImpl.PARAM_USER_DYNAMIC_MEMBERSHIP, syncConfig.user().getDynamicMembership(),
                                 DefaultSyncConfigImpl.PARAM_GROUP_DYNAMIC_GROUPS, syncConfig.group().getDynamicGroups(),
                                 DefaultSyncConfigImpl.PARAM_GROUP_AUTO_MEMBERSHIP, syncConfig.user().getAutoMembership());
                         context.registerService(SyncHandler.class, WhiteboardUtils.getService(whiteboard, SyncHandler.class), props);
 
-                        Map<String, Object> shMappingProps = ImmutableMap.of(
+                        Map<String, Object> shMappingProps = Map.of(
                                 SyncHandlerMapping.PARAM_IDP_NAME, idp.getName(),
                                 SyncHandlerMapping.PARAM_SYNC_HANDLER_NAME, syncConfig.getName());
                         context.registerService(SyncHandlerMapping.class, new SyncHandlerMapping() {}, shMappingProps);
@@ -422,7 +421,7 @@ abstract class AbstractExternalTest extends AbstractTest<RepositoryFixture> {
         @NotNull
         @Override
         public Map<String, ?> getProperties() {
-            return ImmutableMap.of();
+            return Map.of();
         }
 
 
