@@ -21,7 +21,6 @@ import java.util.Collection;
 import java.util.Map;
 import java.util.Set;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.oak.spi.security.authorization.restriction.RestrictionPattern;
 import org.apache.jackrabbit.oak.spi.security.privilege.PrivilegeBits;
 import org.jetbrains.annotations.NotNull;
@@ -81,7 +80,7 @@ public class PrincipalPermissionEntriesTest {
     @Test
     public void testPutAllEntriesSetsFullyLoadedIgnoresExpectedSize() {
         PrincipalPermissionEntries ppe = new PrincipalPermissionEntries(1);
-        ppe.putAllEntries(ImmutableMap.of());
+        ppe.putAllEntries(Map.of());
 
         assertTrue(ppe.isFullyLoaded());
     }
@@ -89,14 +88,14 @@ public class PrincipalPermissionEntriesTest {
     @Test
     public void testPutAllEntriesSetsFullyLoaded() {
         PrincipalPermissionEntries ppe = new PrincipalPermissionEntries(1);
-        ppe.putAllEntries(ImmutableMap.of("/path", Set.of(permissionEntry)));
+        ppe.putAllEntries(Map.of("/path", Set.of(permissionEntry)));
         assertTrue(ppe.isFullyLoaded());
     }
 
     @Test
     public void testPutAllEntriesWithoutExpectedSizeSetsFullyLoaded() {
         PrincipalPermissionEntries ppe = new PrincipalPermissionEntries();
-        ppe.putAllEntries(ImmutableMap.of("/path", Set.of(permissionEntry)));
+        ppe.putAllEntries(Map.of("/path", Set.of(permissionEntry)));
         assertTrue(ppe.isFullyLoaded());
     }
 
@@ -104,7 +103,7 @@ public class PrincipalPermissionEntriesTest {
     public void testPutAllEntries() {
         PrincipalPermissionEntries ppe = new PrincipalPermissionEntries();
 
-        Map<String, Collection<PermissionEntry>> allEntries = ImmutableMap.of("/path", Set.of(permissionEntry));
+        Map<String, Collection<PermissionEntry>> allEntries = Map.of("/path", Set.of(permissionEntry));
         ppe.putAllEntries(allEntries);
 
         assertEquals(allEntries, ppe.getEntries());
@@ -173,7 +172,7 @@ public class PrincipalPermissionEntriesTest {
         PrincipalPermissionEntries ppe = new PrincipalPermissionEntries(2);
         Collection<PermissionEntry> collection = Set.of(permissionEntry);
         Map<String, Collection<PermissionEntry>> allEntries =
-                        ImmutableMap.of("/path", collection, "/path2", collection);
+                        Map.of("/path", collection, "/path2", collection);
 
         ppe.putAllEntries(allEntries);
 
