@@ -22,7 +22,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.oak.plugins.index.lucene.util.CompressingCodec;
 import org.apache.jackrabbit.oak.plugins.index.lucene.util.TokenizerChain;
 import org.apache.jackrabbit.oak.plugins.index.lucene.writer.CommitMitigatingTieredMergePolicy;
@@ -145,10 +144,8 @@ public class LuceneIndexDefinition extends IndexDefinition {
         if (!evaluatePathRestrictions()){
             result = defaultAnalyzer;
         } else {
-            Map<String, Analyzer> analyzerMap = ImmutableMap.<String, Analyzer>builder()
-                    .put(FieldNames.ANCESTORS,
-                            new TokenizerChain(new PathHierarchyTokenizerFactory(Collections.emptyMap())))
-                    .build();
+            Map<String, Analyzer> analyzerMap = Map.of(
+                    FieldNames.ANCESTORS, new TokenizerChain(new PathHierarchyTokenizerFactory(Collections.emptyMap())));
             result = new PerFieldAnalyzerWrapper(defaultAnalyzer, analyzerMap);
         }
 
@@ -172,7 +169,7 @@ public class LuceneIndexDefinition extends IndexDefinition {
             analyzerMap.put(ANL_DEFAULT, new OakAnalyzer(VERSION, true));
         }
 
-        return ImmutableMap.copyOf(analyzerMap);
+        return Collections.unmodifiableMap(analyzerMap);
     }
 
 
