@@ -17,8 +17,9 @@
 package org.apache.jackrabbit.oak.composite;
 
 import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import java.util.List;
+import java.util.Map;
+
 import org.apache.jackrabbit.oak.api.CommitFailedException;
 import org.apache.jackrabbit.oak.composite.checks.NodeStoreChecksService;
 import org.apache.jackrabbit.oak.plugins.memory.MemoryNodeStore;
@@ -78,9 +79,9 @@ public class CompositeNodeStoreServiceTest {
         
 		// Register node stores
 		ctx.registerService(StatisticsProvider.class, StatisticsProvider.NOOP);
-		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(globalStore), ImmutableMap.of("role", "composite-global", "registerDescriptors", Boolean.TRUE));
-		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(nodeStoreLibs), ImmutableMap.of("role", "composite-mount-libs"));
-		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(nodeStoreApps), ImmutableMap.of("role", "composite-mount-apps"));
+		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(globalStore), Map.of("role", "composite-global", "registerDescriptors", Boolean.TRUE));
+		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(nodeStoreLibs), Map.of("role", "composite-mount-libs"));
+		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(nodeStoreApps), Map.of("role", "composite-mount-apps"));
 		ctx.registerInjectActivateService(new NodeStoreChecksService());
 
 		ctx.registerInjectActivateService(new CompositeNodeStoreService());
@@ -105,8 +106,8 @@ public class CompositeNodeStoreServiceTest {
 		
 		ctx.registerService(MountInfoProvider.class, mip);
 		ctx.registerService(StatisticsProvider.class, StatisticsProvider.NOOP);
-		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(global), ImmutableMap.of("role", "composite-global", "registerDescriptors", Boolean.TRUE));
-		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(mount), ImmutableMap.of("role", "composite-mount-libs"));
+		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(global), Map.of("role", "composite-global", "registerDescriptors", Boolean.TRUE));
+		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(mount), Map.of("role", "composite-mount-libs"));
 		ctx.registerInjectActivateService(new NodeStoreChecksService());
 		
 		ctx.registerInjectActivateService(new CompositeNodeStoreService());
@@ -128,8 +129,8 @@ public class CompositeNodeStoreServiceTest {
 		
 		ctx.registerService(MountInfoProvider.class, mip);
 		ctx.registerService(StatisticsProvider.class, StatisticsProvider.NOOP);
-		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(global), ImmutableMap.of("role", "composite-global", "registerDescriptors", Boolean.TRUE));
-		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(mount), ImmutableMap.of("role", "composite-mount-libs"));
+		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(global), Map.of("role", "composite-global", "registerDescriptors", Boolean.TRUE));
+		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(mount), Map.of("role", "composite-mount-libs"));
 		ctx.registerInjectActivateService(new NodeStoreChecksService());
 		
 		ctx.registerInjectActivateService(new CompositeNodeStoreService());
@@ -149,7 +150,7 @@ public class CompositeNodeStoreServiceTest {
 		
 		ctx.registerService(MountInfoProvider.class, mip);
 		ctx.registerService(StatisticsProvider.class, StatisticsProvider.NOOP);
-		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(mount), ImmutableMap.of("role", "composite-mount-libs"));
+		ctx.registerService(NodeStoreProvider.class, new SimpleNodeStoreProvider(mount), Map.of("role", "composite-mount-libs"));
 		ctx.registerInjectActivateService(new NodeStoreChecksService());
 		
 		ctx.registerInjectActivateService(new CompositeNodeStoreService());
